--- a/Views/Tareas/Details.cshtml
+++ b/Views/Tareas/Details.cshtml
@@ -17,7 +17,7 @@
     <dd class="col-sm-10">@Model.Descripcion</dd>
 
     <dt class="col-sm-2">Fecha límite</dt>
-    <dd class="col-sm-10">@Model.FechaLimite?.ToString("yyyy-MM-dd")</dd>
+    <dd class="col-sm-10">@Model.FechaLimite.ToString("yyyy-MM-dd")</dd>
 
     <dt class="col-sm-2">Estado</dt>
     <dd class="col-sm-10">@Model.Estado</dd>
