--- a/Views/Tareas/Index.cshtml
+++ b/Views/Tareas/Index.cshtml
@@ -30,7 +30,7 @@
                 <td>@item.IdTarea</td>
                 <td>@item.Titulo</td>
                 <td>@item.Descripcion</td>
-                <td>@item.FechaLimite?.ToString("yyyy-MM-dd")</td>
+                <td>@item.FechaLimite.ToString("yyyy-MM-dd")</td>
                 <td>@item.Estado</td>
                 <td>@item.IdProyecto</td>
                 <td>@item.IdAsignadoA</td>
