--- a/Views/Dashboards/AdministradorDashboard.cshtml
+++ b/Views/Dashboards/AdministradorDashboard.cshtml
@@ -44,7 +44,7 @@
                 <p class="text-title">Reportes</p>
                 <p class="text-body">Visualice reportes generales del sistema.</p>
             </div>
-            <a asp-controller="Reportes" asp-action="Index" class="card-button">Entrar</a>
+            <a asp-controller="Reportes" asp-action="ReportesAdmin" class="card-button">Entrar</a>
         </div>
 
     </div>
