--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -78,7 +78,9 @@
                             <li><a asp-controller="Usuarios" asp-action="Index"><i class="fas fa-user"></i>Usuarios</a></li>
                             <li><a asp-controller="Roles" asp-action="Index"><i class="fas fa-user-gear"></i>Roles</a></li>
                             <li><a asp-controller="Proyectos" asp-action="Index"><i class="fas fa-folder"></i>Proyectos</a></li>
+                            <li><a asp-controller="Reportes" asp-action="ReportesAdmin"><i class="fas fa-chart-line"></i>Reportes</a></li>
                         }
+
                     </ul>
                 </nav>
 
