--- a/Views/Asignaciones/Delete.cshtml
+++ b/Views/Asignaciones/Delete.cshtml
@@ -4,26 +4,24 @@
     ViewData["Title"] = "Eliminar Asignación";
 }
 
-<h2>Eliminar asignación</h2>
+<link rel="stylesheet" href="~/css/AsignacionesCRUD.css" />
 
-<h3>¿Seguro que querés eliminar esta asignación?</h3>
+<div class="delete-card">
 
-<dl class="row">
-    <dt class="col-sm-2">Proyecto</dt>
-    <dd class="col-sm-10">
-        @Model.Proyecto?.Nombre (@Model.IdProyecto)
-    </dd>
+    <h2>Eliminar Asignación</h2>
+    <p>¿Seguro que querés eliminar esta asignación?</p>
 
-    <dt class="col-sm-2">Estudiante</dt>
-    <dd class="col-sm-10">
-        @Model.Estudiante?.Nombre (@Model.IdEstudiante)
-    </dd>
-</dl>
+    <p><strong>Proyecto:</strong> @Model.Proyecto?.Nombre</p>
+    <p><strong>Estudiante:</strong> @Model.Estudiante?.Nombre</p>
 
-<form asp-action="Delete" method="post">
-    <input type="hidden" asp-for="IdProyecto" />
-    <input type="hidden" asp-for="IdEstudiante" />
+    <form asp-action="Delete" method="post">
+        @Html.AntiForgeryToken()
 
-    <button type="submit" class="btn btn-danger">Eliminar</button>
-    <a asp-action="Index" class="btn btn-secondary">Volver</a>
-</form>
+        <input type="hidden" name="idProyecto" value="@Model.IdProyecto" />
+        <input type="hidden" name="idEstudiante" value="@Model.IdEstudiante" />
+
+        <button type="submit" class="btn-delete-big">Eliminar</button>
+    </form>
+
+    <a asp-action="Index" class="btn-cancel">Cancelar</a>
+</div>
