--- a/Views/Asignaciones/Details.cshtml
+++ b/Views/Asignaciones/Details.cshtml
@@ -1,28 +1,21 @@
 ﻿@model Gestor_Proyectos_Academicos.Models.ProyectosEstudiantes
 
 @{
-    ViewData["Title"] = "Detalles Asignación";
+    ViewData["Title"] = "Detalles de Asignación";
 }
 
-<h2>Detalles de la asignación</h2>
+<link rel="stylesheet" href="~/css/AsignacionesCRUD.css" />
 
-<dl class="row">
-    <dt class="col-sm-2">Proyecto</dt>
-    <dd class="col-sm-10">
-        @Model.Proyecto?.Nombre (@Model.IdProyecto)
-    </dd>
+<div class="details-card">
+    <h2 class="form-title">Detalles de Asignación</h2>
 
-    <dt class="col-sm-2">Estudiante</dt>
-    <dd class="col-sm-10">
-        @Model.Estudiante?.Nombre (@Model.IdEstudiante)
-    </dd>
-</dl>
+    <p><strong>Proyecto:</strong> @Model.Proyecto?.Nombre</p>
+    <p><strong>Estudiante:</strong> @Model.Estudiante?.Nombre</p>
 
-<p>
     <a asp-action="Edit"
        asp-route-idProyecto="@Model.IdProyecto"
        asp-route-idEstudiante="@Model.IdEstudiante"
-       class="btn btn-primary">Editar</a>
+       class="btn-create">Editar</a>
 
-    <a asp-action="Index" class="btn btn-secondary">Volver</a>
-</p>
+    <a asp-action="Index" class="btn-cancel">Volver</a>
+</div>
