--- a/Views/Asignaciones/Edit.cshtml
+++ b/Views/Asignaciones/Edit.cshtml
@@ -4,27 +4,29 @@
     ViewData["Title"] = "Editar Asignación";
 }
 
-<h2>Editar asignación</h2>
+<link rel="stylesheet" href="~/css/AsignacionesCRUD.css" />
 
-<form asp-action="Edit" method="post">
-    <!-- Claves originales ocultas -->
-    <input type="hidden" name="idProyectoOriginal" value="@Model.IdProyecto" />
-    <input type="hidden" name="idEstudianteOriginal" value="@Model.IdEstudiante" />
+<div class="form-card">
 
-    <div class="form-group">
-        <label for="IdProyecto">Proyecto</label>
-        <select asp-for="IdProyecto" class="form-control"
-                asp-items="ViewBag.IdProyecto"></select>
-    </div>
+    <h2 class="form-title">Editar Asignación</h2>
 
-    <div class="form-group">
-        <label for="IdEstudiante">Estudiante</label>
-        <select asp-for="IdEstudiante" class="form-control"
-                asp-items="ViewBag.IdEstudiante"></select>
-    </div>
+    <form asp-action="Edit">
 
-    <br />
+        <input type="hidden" name="idProyectoOriginal" value="@Model.IdProyecto" />
+        <input type="hidden" name="idEstudianteOriginal" value="@Model.IdEstudiante" />
 
-    <button type="submit" class="btn btn-primary">Guardar cambios</button>
-    <a asp-action="Index" class="btn btn-secondary">Volver</a>
-</form>
+        <div class="form-group">
+            <label asp-for="IdProyecto">Proyecto</label>
+            <select asp-for="IdProyecto" class="form-input" asp-items="ViewBag.Proyectos"></select>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="IdEstudiante">Estudiante</label>
+            <select asp-for="IdEstudiante" class="form-input" asp-items="ViewBag.Estudiantes"></select>
+        </div>
+
+        <button type="submit" class="btn-guardar">Guardar cambios</button>
+        <a asp-action="Index" class="btn-cancel">Volver</a>
+
+    </form>
+</div>
