--- a/Views/Reportes/MiResumen.cshtml
+++ b/Views/Reportes/MiResumen.cshtml
@@ -4,27 +4,33 @@
     ViewData["Title"] = "Mi Resumen de Tareas";
 }
 
-<h2 class="mt-3">Mi Resumen de Tareas</h2>
-<hr />
+<link rel="stylesheet" href="~/css/Reportes.css" />
 
-<table class="table table-striped table-bordered">
-    <thead class="table-dark">
-        <tr>
-            <th>Proyecto</th>
-            <th>Total Tareas</th>
-            <th>Tareas Completadas</th>
-            <th>Avance</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var e in Model)
-        {
+<div class="section-header">
+    <h2 class="section-titulo">Mi Resumen de Tareas</h2>
+</div>
+
+<div class="card-table-container">
+    <table class="table">
+        <thead>
             <tr>
-                <td>@e.Proyecto</td>
-                <td>@e.TotalTareas</td>
-                <td>@e.TareasCompletadas</td>
-                <td>@e.PorcentajeAvance.ToString("0.##") %</td>
+                <th>Proyecto</th>
+                <th>Total Tareas</th>
+                <th>Tareas Completadas</th>
+                <th>Avance</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+
+        <tbody>
+            @foreach (var e in Model)
+            {
+                <tr>
+                    <td>@e.Proyecto</td>
+                    <td>@e.TotalTareas</td>
+                    <td>@e.TareasCompletadas</td>
+                    <td>@e.PorcentajeAvance.ToString("0.##") %</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
