--- a/Views/Reportes/Proyectos.cshtml
+++ b/Views/Reportes/Proyectos.cshtml
@@ -4,35 +4,39 @@
     ViewData["Title"] = "Reporte de Proyectos";
 }
 
-<h2 class="mt-3">Reporte de Proyectos</h2>
-<hr />
+<link rel="stylesheet" href="~/css/Reportes.css" />
 
-<table class="table table-striped table-bordered">
-    <thead class="table-dark">
-        <tr>
-            <th>Proyecto</th>
-            <th>Profesor</th>
-            <th>Fecha Inicio</th>
-            <th>Fecha Fin</th>
-            <th>Total Tareas</th>
-            <th>Tareas Completadas</th>
-            <th>Avance</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var p in Model)
-        {
+<div class="section-header">
+    <h2 class="section-titulo">Reporte de Proyectos</h2>
+</div>
+
+<div class="card-table-container">
+    <table class="table">
+        <thead>
             <tr>
-                <td>@p.Proyecto</td>
-                <td>@p.Profesor</td>
-                <td>@p.FechaInicio.ToShortDateString()</td>
-                <td>@(p.FechaFin?.ToShortDateString() ?? "-")</td>
-                <td>@p.TotalTareas</td>
-                <td>@p.TareasCompletadas</td>
-                <td>
-                    @p.PorcentajeAvance.ToString("0.##") %
-                </td>
+                <th>Proyecto</th>
+                <th>Profesor</th>
+                <th>Fecha Inicio</th>
+                <th>Fecha Fin</th>
+                <th>Total Tareas</th>
+                <th>Tareas Completadas</th>
+                <th>Avance</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+
+        <tbody>
+            @foreach (var p in Model)
+            {
+                <tr>
+                    <td>@p.Proyecto</td>
+                    <td>@p.Profesor</td>
+                    <td>@p.FechaInicio.ToShortDateString()</td>
+                    <td>@(p.FechaFin?.ToShortDateString() ?? "-")</td>
+                    <td>@p.TotalTareas</td>
+                    <td>@p.TareasCompletadas</td>
+                    <td>@p.PorcentajeAvance.ToString("0.##") %</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
