--- a/Views/Roles/Details.cshtml
+++ b/Views/Roles/Details.cshtml
@@ -4,19 +4,19 @@
     ViewData["Title"] = "Detalles del Rol";
 }
 
-<h2>Detalles del Rol</h2>
+<link rel="stylesheet" href="~/css/RolesCRUD.css" />
 
-<div>
-    <dl class="row">
-        <dt class="col-sm-2">Id</dt>
-        <dd class="col-sm-10">@Model.IdRol</dd>
+<div class="details-card">
+    <h2 class="form-title">Detalles del Rol</h2>
 
-        <dt class="col-sm-2">Nombre</dt>
-        <dd class="col-sm-10">@Model.NombreRol</dd>
+    <dl>
+        <dt>ID</dt>
+        <dd>@Model.IdRol</dd>
+
+        <dt>Nombre del Rol</dt>
+        <dd>@Model.NombreRol</dd>
     </dl>
-</div>
 
-<p>
-    <a asp-action="Edit" asp-route-id="@Model.IdRol" class="btn btn-primary">Editar</a>
-    <a asp-action="Index" class="btn btn-secondary">Volver</a>
-</p>
+    <a asp-action="Edit" asp-route-id="@Model.IdRol" class="btn-create">Editar</a>
+    <a asp-action="Index" class="btn-cancel">Volver</a>
+</div>
