--- a/Views/Tareas/Delete.cshtml
+++ b/Views/Tareas/Delete.cshtml
@@ -1,15 +1,24 @@
 ﻿@model Gestor_Proyectos_Academicos.Models.Tarea
 
-@{
-    ViewData["Title"] = "Eliminar tarea";
-}
+<link rel="stylesheet" href="~/css/TareasCRUD.css" />
 
-<h2>Eliminar tarea</h2>
+<h2 class="section-title">Eliminar tarea</h2>
 
-<p>¿Está seguro que desea eliminar la tarea <strong>@Model.Titulo</strong>?</p>
+<div class="delete-card">
 
-<form asp-action="Delete" method="post">
-    <input type="hidden" asp-for="IdTarea" />
-    <button type="submit" class="btn btn-danger">Eliminar</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
-</form>
+    <p>¿Seguro que deseas eliminar esta tarea?</p>
+
+    <h3 style="margin-top: 5px; font-weight: bold;">
+        @Model.Titulo
+    </h3>
+
+    <p><strong>Proyecto:</strong> @Model.Proyecto.Nombre</p>
+
+    <form asp-action="DeleteConfirmed" method="post" style="margin-top:20px;">
+        <input type="hidden" name="idTarea" value="@Model.IdTarea" />
+        <button type="submit" class="btn-delete-big">Eliminar</button>
+    </form>
+
+    <a asp-action="Index" class="btn-cancel">Cancelar</a>
+
+</div>
