--- a/Views/Usuarios/Create.cshtml
+++ b/Views/Usuarios/Create.cshtml
@@ -4,40 +4,40 @@
     ViewData["Title"] = "Crear usuario";
 }
 
-<h2>Crear usuario</h2>
+<link rel="stylesheet" href="~/css/UsuariosCRUD.css" />
 
-<form asp-action="Create" method="post">
-    <div class="form-group">
-        <label asp-for="Nombre"></label>
-        <input asp-for="Nombre" class="form-control" />
-        <span asp-validation-for="Nombre" class="text-danger"></span>
-    </div>
+<div class="form-card">
+    <h2 class="form-title">Crear Usuario</h2>
 
-    <div class="form-group">
-        <label asp-for="Correo"></label>
-        <input asp-for="Correo" class="form-control" />
-        <span asp-validation-for="Correo" class="text-danger"></span>
-    </div>
+    <div asp-validation-summary="All" class="text-danger"></div>
 
-    <div class="form-group">
-        <label asp-for="Contrasena"></label>
-        <input asp-for="Contrasena" type="password" class="form-control" />
-        <span asp-validation-for="Contrasena" class="text-danger"></span>
-    </div>
+    <form asp-action="Create" method="post">
 
-    <div class="form-group">
-        <label>Rol</label>
-        <select asp-for="IdRol" asp-items="ViewBag.Roles" class="form-control"></select>
-        <span asp-validation-for="IdRol" class="text-danger"></span>
-    </div>
+        <div class="form-group">
+            <label asp-for="Nombre"></label>
+            <input asp-for="Nombre" class="form-input" />
+            <span asp-validation-for="Nombre" class="text-danger"></span>
+        </div>
 
-    <br />
-    <button type="submit" class="btn btn-success">Guardar</button>
-    <a asp-action="Index" class="btn btn-secondary">Volver</a>
-</form>
+        <div class="form-group">
+            <label asp-for="Correo"></label>
+            <input asp-for="Correo" class="form-input" />
+            <span asp-validation-for="Correo" class="text-danger"></span>
+        </div>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
+        <div class="form-group">
+            <label asp-for="Contrasena"></label>
+            <input asp-for="Contrasena" type="password" class="form-input" />
+            <span asp-validation-for="Contrasena" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label>Rol</label>
+            <select asp-for="IdRol" asp-items="ViewBag.Roles" class="form-input"></select>
+            <span asp-validation-for="IdRol" class="text-danger"></span>
+        </div>
+
+        <button type="submit" class="btn-guardar">Guardar</button>
+        <a asp-action="Index" class="btn-cancel">Volver</a>
+    </form>
+</div>
