--- a/Views/Usuarios/Details.cshtml
+++ b/Views/Usuarios/Details.cshtml
@@ -1,26 +1,24 @@
 ﻿@model Gestor_Proyectos_Academicos.Models.Usuario
 
-@{
-    ViewData["Title"] = "Detalles del usuario";
-}
+<link rel="stylesheet" href="~/css/UsuariosCRUD.css" />
 
-<h2>Detalles del usuario</h2>
+<div class="details-card">
+    <h2 class="form-title">Detalles del Usuario</h2>
 
-<dl class="row">
-    <dt class="col-sm-2">ID</dt>
-    <dd class="col-sm-10">@Model.IdUsuario</dd>
+    <dl>
+        <dt>ID</dt>
+        <dd>@Model.IdUsuario</dd>
 
-    <dt class="col-sm-2">Nombre</dt>
-    <dd class="col-sm-10">@Model.Nombre</dd>
+        <dt>Nombre</dt>
+        <dd>@Model.Nombre</dd>
 
-    <dt class="col-sm-2">Correo</dt>
-    <dd class="col-sm-10">@Model.Correo</dd>
+        <dt>Correo</dt>
+        <dd>@Model.Correo</dd>
 
-    <dt class="col-sm-2">Rol</dt>
-    <dd class="col-sm-10">@Model.Rol?.NombreRol</dd>
-</dl>
+        <dt>Rol</dt>
+        <dd>@Model.Rol?.NombreRol</dd>
+    </dl>
 
-<p>
-    <a asp-action="Edit" asp-route-id="@Model.IdUsuario" class="btn btn-primary">Editar</a>
-    <a asp-action="Index" class="btn btn-secondary">Volver</a>
-</p>
+    <a asp-action="Edit" asp-route-id="@Model.IdUsuario" class="btn-create">Editar</a>
+    <a asp-action="Index" class="btn-cancel">Volver</a>
+</div>
